<resources>
    <string name="app_name">KMTest</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="dummy_username">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="third_screen">Third Screen</string>
    <string name="full_name">Firstname Lastname</string>
    <string name="dummy_email">email@email.com</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="retry">Retry</string>
    <string name="choose_a_user">Choose a User</string>
</resources>