<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.first.FirstScreenActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintBottom_toTopOf="@id/nameEditTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginVertical="25dp"
        android:background="@drawable/background_text_field"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/palindromeEditTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/background_text_field"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/palindromeEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/background_text_field"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/btnCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/palindromeEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/background_text_field"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/palindrome"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/check"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>